Updates from ShareLaTeX

--- a/Titelseite.tex
+++ b/Titelseite.tex
@@ -22,7 +22,7 @@
         \vspace{2.0cm}
 
         \begin{huge}
-            \textbf{- Titel der eigenen Arbeit, eine oder maximal drei Zeilen -} 
+            \textbf{Vergleich von Apple Swift und Google Go} 
             \par
         \end{huge}        
         \vfill
