Updates from ShareLaTeX

--- a/main.tex
+++ b/main.tex
@@ -166,7 +166,15 @@ BoldItalicFont=timesbi.ttf
 %<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
 
 \chapter{Motivation und Problemstellung}
+Neben den etablierten Programmiersprachen wie Java, C++/C werden kontinuirlich neue Programmiersprchen entwickelt. 
+Unter den Top5 der mit GitHub verwalteten Programmiersprachen befinden sich mit Swift von Apple und Go von Google zwei Projekte die von den aktuell bedeutensten IT-Firmen stammen.
 
+
+
+Doch warum bedarf es der Entwicklung neuer Programmiersprachen? "Google wollte sich nicht damit zufriedengeben, das die Unterstützung aktueller Trends in der Systemsoftwareentwicklung wie Parallelisierung, Cloud-Computing etc. in den etablierten Hochsprachen nur mehr schlecht als recht ergänzt wurde."(Feike/Blass Programmierung in Google Go)
+
+Was macht Swift interessant?
+"Interessanterweise ist ein nicht unwesentlicher Punkt bei der Beantowrtung dieser Frage die bisherige Sprache der Apple-Plattform: Objective-C."(Popp, Durchstarten mit Swift) 
 
 \chapter{Forschungsfrage}
 \blindtext
