Updates from ShareLaTeX

--- a/Literatur/literatur.bib
+++ b/Literatur/literatur.bib
@@ -1,28 +1,42 @@
-@INBOOK{brooks2001-silver,
-	TITLE="The Mythical Man-Month",
-	CHAPTER="No Silver Bullet - Essence and Accident in Software Engineering",
-	AUTHOR="F. P. Brooks",
-	PAGES="177--203",
-	YEAR=2001,
-	PUBLISHER="Addison Wesley Longman Inc.",
-	ADDRESS="New York",
-	EDITION="15., Aufl."
+@BOOK{Feike2011,
+	AUTHOR = {Feike, Rainer AND Blass, Steffen},
+	YEAR = {2011},
+	TITLE = {Programmierung in Google Go - },
+	EDITION = {1. Aufl.},
+	ISBN = {978-3-827-33009-3},
+	PUBLISHER = {Pearson Deutschland GmbH},
+	ADDRESS = {München},
 }
 
-@BOOK{mueller2000,
-	AUTHOR="J.-A. Müller",
-	TITLE="Systems Engineering",
-	PUBLISHER="Manz-Verlag Schulbuch (Fortis)",
-	YEAR=2000,
-	ADDRESS="Wien"
+@book{Hinzberg.2015,
+ author = {Hinzberg, Holger},
+ year = {2015},
+ title = {{Einf{\"u}hrung in Swift: [mit Referenzkarte zum Herausnehmen]}},
+ price = {EUR 19.99 (DE)},
+ address = {Frechen},
+ edition = {1. Aufl.},
+ publisher = {mitp},
+ isbn = {978-3-8266-9675-6}
 }
 
-@TECHREPORT{pasche1992,
-	AUTHOR="M. Pasche",
-	TITLE="Synergetik und Evolutorische Ökonomik",
-	INSTITUTION="Universität Hannover Fachbereich Wirtschaftswissenschaften",
-	TYPE="Diskussionspapier",
-	NUMBER=179,
-	MONTH=dec,
-	YEAR=1992
+@book{Popp.2015,
+ author = {Popp, Stefan and Peters, Ralf},
+ year = {2015},
+ title = {{Durchstarten mit Swift: [Apples neue Programmiersprache Schritt f{\"u}r Schritt verst{\"a}ndlich und gut erkl{\"a}rt]}},
+ price = {EUR 24.90 (DE)},
+ address = {Beijing},
+ edition = {1. Aufl.},
+ publisher = {O'Reilly},
+ isbn = {978-3-95561-884-1}
 }
+
+@Book{piepmeyer2010grundkurs,
+ author = {Piepmeyer, Lothar},
+ title = {Grundkurs funktionale Programmierung mit Scala},
+ publisher = {Hanser},
+ year = {2010},
+ address = {München},
+ isbn = {978-3-446-42092-2}
+ }
+
+
