Updates from ShareLaTeX

--- a/main.tex
+++ b/main.tex
@@ -188,12 +188,12 @@ BoldItalicFont=timesbi.ttf
 
 \section{Motivation und Problemstellung}
 Neben den etablierten Programmiersprachen wie Java, C/C++ werden kontinuierlich neue Programmiersprachen entwickelt. 
-Unter den Top5 der mit GitHub verwalteten Programmiersprachen befinden sich mit Swift von Apple und Go von Google zwei Projekte die von bedeutenden IT-Firmen stammen.
+Unter den Top5 der mit GitHub verwalteten Programmiersprachen befinden sich mit Swift von Apple und Go von Google zwei Projekte die von bedeutenden IT-Firmen stammen. (siehe Abbildung\ref{figure:github})
 
 	\begin{figure}[h]
 	\centering
 	\includegraphics[width=0.5\textwidth]{Images/github}
-	\caption{Ranking der unter GitHub verwalteten Programmiersprachen Stand: 26.01.2017}%
+	\caption{Ranking der unter GitHub verwalteten Programmiersprachen Stand: 26.01.2017 Quelle: Github.com}%
 	\label{figure:github}%
 	\end{figure}
 
@@ -219,7 +219,7 @@ Im Rahmen dieser Bachelorarbeit soll Swift und Go anhand von definierten Kriteri
 \end{itemize}
 \end{samepage}
 
-In den Punkten objektorientierte Programmierung und funktionale Programmierung stellt sich die Frage, wie sich Swift und Go zu den bereits etablierten Hochsprachen unterscheiden oder ähneln. 
+In den Punkten objektorientierte Programmierung und funktionale Programmierung stellt sich die Frage, wie sich Swift und Go zu den bereits etablierten Programmiersprachen unterscheiden beziehungsweise ähneln. 
 Was machen Swift und Go anders als die etablierten Programmiersprachen?
 
 \section{Methode}
@@ -285,7 +285,15 @@ Swift und Go sollen anhand folgender Kriterien verglichen werden:
   \end{itemize}
 \end{itemize}
 
-Soweit möglich, soll jedes Kriterium anhand eines aussagekräftigen Beispiels veranschaulicht werden. 
+Soweit möglich, soll jedes Kriterium anhand eines aussagekräftigen Beispiels veranschaulicht werden.
+Die Gewichtung der Vergleichskriterien sind in Abbildung \ref{figure:gewichtung} zu sehen.
+
+	\begin{figure}[h]
+	\centering
+	\includegraphics[width=0.6\textwidth]{Images/gewichtung}
+	\caption{Gewichtung der Vergleichskriterien}%
+	\label{figure:gewichtung}%
+	\end{figure}
 
 \section{Gliederung}
 
@@ -312,6 +320,7 @@ Soweit möglich, soll jedes Kriterium anhand eines aussagekräftigen Beispiels v
     \item \textbf{Ausblick}
 \end{enumerate}
 \end{samepage}
+\newpage
 
 \section{Zeitplan}
 
